/*
 * $Id: ChangeLog,v 1.1030 2003/05/17 15:55:13 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-05-17 19:02 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/at.c
    ! Parameters 3 and 4 of AT() were not sanitized nor checked,
      causing endless loops/segfaults on misbehaving programs.
      Currently, they have been sanitized, but probably the
      correct thing to do there is to issue an out of bound
      error.

2003-05-17 17:30 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/bin/hb-mkslib.sh
  * xharbour/make_rpm.sh
  * xharbour/xharbour.spec
  * xharbour/source/rtl/gtcrs/gtcrs.h
  * xharbour/source/rtl/gtcrs/Makefile
  * xharbour/source/rtl/gtcrs/hb-charmap.def
    * headers added
    * some minor modifications

2003-05-17 04:22 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/bin/!pack_src.sh
    * some minor modifications

  + xharbour/bin/hb-mkslib.sh
    + simple script to build shared libraries from static ones and object
      files

  + xharbour/xharbour.spec
    + RPM spec to build xHarbour binaries RPMs. It produce three RPMs
      xharbour (compiler and tools), xharbour-lib (shared xHarbour libraries
      for developers and users of application linked with shard libs)
      xharbour-static (static libs for developers who want to produce static
      binaries). xharbour rpm has additional tools 'xhbcmp', 'xhlnk', 'xhbmk'
      See README.RPM for detailed description.
    
  + xharbour/make_rpm.sh
    + simple script which automaticaly packs the CVS tree and builds
      RPMs

2003-05-16 17:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/serialize.prg
    ! Moved Main Procedure to be the first defined procedure (NON Linux Systems execute the first defined symbol at startup).